--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,14 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        sourceSets{
+            main{
+                jniLibs.srcDirs=['libs']
+            }
+        }
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -25,7 +32,6 @@ repositories {
 
     }
 }
-
 
 dependencies {
     //    compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -58,4 +64,5 @@ dependencies {
     compile files('libs/AMap3DMap_3.3.1_AMapNavi_1.8.0_20160420.jar')
     //FAB Button
     compile 'com.github.shell-software:fab:1.1.2'
+    compile files('libs/jpush-android-2.1.3.jar')
 }
