--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,17 +19,17 @@ android {
         }
     }
 
-    task nativeLibsToJar(type: Zip, description: "create a jar archive of the native libs") {
-        destinationDir file("$projectDir/libs")
-        baseName "Native_Libs2"
-        extension "jar"
-        from fileTree(dir: "libs", include: "**/*.so")
-        into "lib"
-    }
-
-    tasks.withType(JavaCompile) {
-        compileTask -> compileTask.dependsOn(nativeLibsToJar)
-    }
+//    task nativeLibsToJar(type: Zip, description: "create a jar archive of the native libs") {
+//        destinationDir file("$projectDir/libs")
+//        baseName "Native_Libs2"
+//        extension "jar"
+//        from fileTree(dir: "libs", include: "**/*.so")
+//        into "lib"
+//    }
+//
+//    tasks.withType(JavaCompile) {
+//        compileTask -> compileTask.dependsOn(nativeLibsToJar)
+//    }
 
 
 
@@ -50,7 +50,6 @@ repositories {
 }
 
 dependencies {
-
     //    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile files('libs/xUtils-2.6.14.jar')
@@ -69,8 +68,6 @@ dependencies {
     compile('com.github.afollestad.material-dialogs:core:0.8.5.8@aar') {
         transitive = true
     }
-    //    compile project(':library')
-
     //Facebook动画框架
     compile 'com.facebook.rebound:rebound:0.3.8'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
@@ -79,17 +76,12 @@ dependencies {
     //FAB Button
     compile 'com.github.shell-software:fab:1.1.2'
     compile files('libs/jpush-android-2.1.3.jar')
-    compile files('libs/BaiduLBS_Android.jar')
-    compile files('libs/IndoorscapeAlbumPlugin.jar')
-    compile files('libs/httpmime-4.1.2.jar')
-    compile files('libs/BaiduNaviSDK_3.1.1.jar')
-    compile files('libs/zxing.jar')
     compile files('libs/nineoldandroids-2.4.0.jar')
-    compile files('libs/baidumapapi_map_v3_7_3.jar')
-    compile files('libs/locSDK_6.13.jar')
-    compile files('libs/baidumapapi_base_v3_7_3.jar')
-    compile files('libs/baidumapapi_search_v3_7_3.jar')
-    compile files('libs/baidumapapi_util_v3_7_3.jar')
-    compile files('libs/baidumapapi_radar_v3_7_3.jar')
-    compile files('libs/baidumapapi_cloud_v3_7_3.jar')
+    //定位
+    compile files('libs/AMap_Location_V2.4.1_20160414.jar')
+    compile files('libs/AMap3DMap_3.3.1_AMapNavi_1.8.0_AMapSearch_3.2.1_20160425.jar')
+    //    compile files('libs/AMap3DMap_3.3.1_AMapNavi_1.8.0_20160425.jar')
+    //    compile files('libs/AMap_3DMap_V3.3.1_20160419.jar')
+    //    compile files('libs/Msc.jar')
+    compile files('libs/Msc.jar')
 }
