--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,17 +19,7 @@ android {
         }
     }
 
-//    task nativeLibsToJar(type: Zip, description: "create a jar archive of the native libs") {
-//        destinationDir file("$projectDir/libs")
-//        baseName "Native_Libs2"
-//        extension "jar"
-//        from fileTree(dir: "libs", include: "**/*.so")
-//        into "lib"
-//    }
-//
-//    tasks.withType(JavaCompile) {
-//        compileTask -> compileTask.dependsOn(nativeLibsToJar)
-//    }
+
 
 
 
@@ -70,6 +60,7 @@ dependencies {
     }
     //Facebook动画框架
     compile 'com.facebook.rebound:rebound:0.3.8'
+    compile 'com.tumblr:backboard:0.1.0'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile files('libs/gson-2.2.4.jar')
     compile files('libs/weizhang_sdk.jar')
@@ -80,8 +71,7 @@ dependencies {
     //定位
     compile files('libs/AMap_Location_V2.4.1_20160414.jar')
     compile files('libs/AMap3DMap_3.3.1_AMapNavi_1.8.0_AMapSearch_3.2.1_20160425.jar')
-    //    compile files('libs/AMap3DMap_3.3.1_AMapNavi_1.8.0_20160425.jar')
-    //    compile files('libs/AMap_3DMap_V3.3.1_20160419.jar')
-    //    compile files('libs/Msc.jar')
     compile files('libs/Msc.jar')
+    //加载图片的Glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
