--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,30 +12,23 @@ android {
         versionName "1.0"
     }
 
-    sourceSets {
-
-        main {
-            jniLibs.srcDirs = ['libs']
-        }
-    }
-
-
-
-
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/assets', 'src/main/assets/']
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 repositories {
     maven {
         url "https://jitpack.io"
-
     }
 }
 
@@ -69,9 +62,9 @@ dependencies {
     compile files('libs/jpush-android-2.1.3.jar')
     compile files('libs/nineoldandroids-2.4.0.jar')
     //定位
-    compile files('libs/AMap_Location_V2.4.1_20160414.jar')
-    compile files('libs/AMap3DMap_3.3.1_AMapNavi_1.8.0_AMapSearch_3.2.1_20160425.jar')
     compile files('libs/Msc.jar')
     //加载图片的Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile files('src/main/jniLibs/AMap3DMap_3.3.1_AMapNavi_1.8.0_AMapSearch_3.2.1_20160425.jar')
+    compile files('src/main/jniLibs/AMap_Location_V2.4.1_20160414.jar')
 }
