--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,6 @@ dependencies {
     compile files('libs/AMap3DMap_3.3.2_AMapNavi_1.8.0_AMapSearch_3.2.1_AMapLocation_2.4.1_20160524.jar')
 
 
+    //二维码扫描
     compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:1.0.0'
 }
