--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '24.0.0 rc3'
 
     defaultConfig {
         applicationId "com.miss.imissyou.mycar"
@@ -66,7 +66,6 @@ dependencies {
     compile files('libs/Msc.jar')
     compile files('libs/jaudiotagger-2.0.4.jar')
     compile files('libs/AMap3DMap_3.3.2_AMapNavi_1.8.0_AMapSearch_3.2.1_AMapLocation_2.4.1_20160524.jar')
-
     //二维码扫描
     compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:1.0.0'
 }
