--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -145,13 +145,15 @@
         <meta-data android:name="JPUSH_APPKEY" android:value="434549c4fd934c2af57ef4e1" /> <!--  </>值来自开发者平台取得的AppKey-->
 
         <!--高德地图API-->
-        <meta-data android:name="com.amap.api.v2.apikey" android:value="7e528cf5080d8bd45293f463d99edb1f"/>
-        <service android:name="com.amap.api.location.APSService"></service>
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="b9ea926a1a00afb44896fc2cafd07aa2"/>
+        <service android:name="com.amap.api.location.APSService"/>
 
         <!--Glide-->
-        <meta-data
+        <meta-data android:name="com.miss.imissyou.mycar.util.GlideConfiguration" android:value="GlideModule"/>
+
+       <!-- <meta-data
             android:name="com.bumptech.glide.integration.volley.VolleyGlideModule"
-            android:value="GlideModule" />
+            android:value="GlideModule" />-->
 
     </application>
 
