开始用户信息界面的工作

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         <activity android:name=".view.activity.NaviViewActivity" android:screenOrientation="portrait"/>
         <activity android:name=".view.activity.ChangePhoneNumberActivity" android:screenOrientation="portrait"/>
 
+        <!---用户模块-->
+        <activity android:name=".view.activity.UserBaseActivity" android:screenOrientation="portrait"/>
+
         <!--用户登录-->
         <activity android:name=".view.activity.FindPasswordActivity" android:screenOrientation="portrait"/>
         <activity android:name=".view.activity.LoginActivity" android:screenOrientation="portrait"/>
