--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -34,7 +35,6 @@ repositories {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
     compile files('libs/xUtils-2.6.14.jar')
     compile('com.github.ozodrukh:CircularReveal:1.3.1@aar') {
         transitive = true;
@@ -67,20 +67,14 @@ dependencies {
     //定位搜索导航
     compile files('libs/Msc.jar')
     compile files('libs/jaudiotagger-2.0.4.jar')
-     compile files('libs/AMap3DMap_3.3.2_AMapNavi_1.8.0_AMapSearch_3.2.1_AMapLocation_2.4.1_20160524.jar')
+    compile files('libs/AMap3DMap_3.3.2_AMapNavi_1.8.0_AMapSearch_3.2.1_AMapLocation_2.4.1_20160524.jar')
     //二维码扫描
     compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:1.0.0'
-   //compile files('libs/zxing.jar')
+    //compile files('libs/zxing.jar')
     //Material Design
     compile 'com.github.rey5137:material:1.2.4'
-
     compile 'org.jetbrains:annotations-java5:15.0'
 
-    //添加单元测试
-    testCompile 'org.robolectric:robolectric:3.0'
-    //testCompile 'junit:junit:4.12'
-    //androidTestCompile 'com.android.support.test:runner:0.2'
-    //androidTestCompile 'com.android.support.test.rules:0.2'
-    //
-    // androidTestCompile 'com.android.support.test.espresso:espresso-core:2.1'
+    compile 'com.google.android:multidex:0.1'
+
 }
