--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
 
         <!---用户模块-->
         <activity android:name=".view.activity.UserBaseActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".view.activity.ChangePasswordActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".view.activity.ChangeUserNameActivity" android:screenOrientation="portrait"/>
 
         <!--用户登录-->
         <activity android:name=".view.activity.FindPasswordActivity" android:screenOrientation="portrait"/>
