--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     compile 'com.kymjs.rxvolley:bitmapcore:1.0.9'
     //    compile 'com.yalantis:sidemenu:1.0'
     compile 'com.android.support:support-v4:23.2.1'
-//    compile files('libs/core.jar')
+    //    compile files('libs/core.jar')
     //Dialog  https://github.com/afollestad/material-dialogs#proguard
     compile('com.github.afollestad.material-dialogs:core:0.8.5.8@aar') {
         transitive = true
@@ -57,7 +57,6 @@ dependencies {
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile files('libs/gson-2.2.4.jar')
     compile files('libs/weizhang_sdk.jar')
-
     //FAB Button
     compile 'com.github.shell-software:fab:1.1.2'
     compile files('libs/jpush-android-2.1.3.jar')
@@ -74,7 +73,6 @@ dependencies {
     //Material Design
     compile 'com.github.rey5137:material:1.2.4'
     compile 'org.jetbrains:annotations-java5:15.0'
-
-    compile 'com.google.android:multidex:0.1'
-
+    //    compile 'com.google.android:multidex:0.1'
+//    compile files('libs/core.jar')
 }
