--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     sourceSets {
         main {
             assets.srcDirs = ['src/main/assets', 'src/main/assets/']
             jniLibs.srcDirs = ['libs']
         }
+    }
+
+    dexOptions {
+        javaMaxHeapSize "2048M"
     }
 }
 
@@ -48,7 +53,6 @@ dependencies {
     compile 'com.kymjs.rxvolley:rxvolley:1.0.9'
     compile 'com.kymjs.rxvolley:okhttp:1.0.9'
     compile 'com.kymjs.rxvolley:bitmapcore:1.0.9'
-
     compile 'com.android.support:support-v4:23.2.1'
     //    compile files('libs/core.jar')
     //Dialog  https://github.com/afollestad/material-dialogs#proguard
@@ -78,5 +82,8 @@ dependencies {
     compile 'com.github.rey5137:material:1.2.4'
     compile 'org.jetbrains:annotations-java5:15.0'
     //    compile 'com.google.android:multidex:0.1'
-//    compile files('libs/core.jar')
+    //    compile files('libs/core.jar')
+    compile files('libs/libammsdk.jar')
+    compile files('libs/alipaySdk-20160223.jar')
+    compile files('libs/libpingpp-2.1.3.jar')
 }
