--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name="android.support.multidex.MultiDexApplication"
         android:theme="@style/AppTheme">
 
         <!--欢迎界面-->
@@ -32,7 +33,7 @@
 
         <!--Activity-->
         <activity android:name=".view.activity.SettingActivity" android:screenOrientation="portrait"/>
-
+        <activity android:name=".view.activity.CutImageActvity" android:screenOrientation="portrait"/>
         <activity android:name=".view.activity.AboutActivity" android:screenOrientation="portrait"/>
         <activity android:name=".view.activity.AuthorActivity" android:screenOrientation="portrait"/>
         <activity android:name=".view.activity.HelpActivity" android:screenOrientation="portrait"/>
