--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -205,11 +205,15 @@
         <service android:name="com.amap.api.location.APSService"/>
 
         <!--Glide-->
-        <meta-data android:name="com.miss.imissyou.mycar.util.GlideConfiguration" android:value="GlideModule"/>
+        <meta-data android:name="com.miss.imissyou.mycar.util.GlideConfiguration" android:value="GlideModule"/><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
-       <!-- <meta-data
-            android:name="com.bumptech.glide.integration.volley.VolleyGlideModule"
-            android:value="GlideModule" />-->
+        <!-- <meta-data
+             android:name="com.bumptech.glide.integration.volley.VolleyGlideModule"
+             android:value="GlideModule" />-->
 
     </application>
 
