--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,16 +11,14 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        //高斯模糊
-//        renderscriptTargetApi 19
-//        renderscriptSupportModeEnabled true
-        multiDexEnabled true
+
+            multiDexEnabled true
     }
 
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
-            assets.srcDirs = ['src/main/assets', 'src/main/assets/']
+            assets.srcDirs = ['src/main/assets']
         }
     }
 
@@ -69,27 +67,22 @@ dependencies {
     //Material Design
     compile 'com.github.rey5137:material:1.2.4'
     compile 'org.jetbrains:annotations-java5:15.0'
-
     compile 'com.android.support:multidex:1.0.1'
-
     compile files('src/main/jniLibs/gson-2.2.4.jar')
     //定位搜索导航
     compile files('src/main/jniLibs/AMap3DMap_3.3.2_AMapNavi_1.8.0_AMapSearch_3.2.1_AMapLocation_2.4.1_20160524.jar')
-    compile files('src/main/jniLibs/alipaySdk-20160223.jar')
     compile files('src/main/jniLibs/jaudiotagger-2.0.4.jar')
-    compile files('src/main/jniLibs/libpingpp-2.1.3.jar')
     compile files('src/main/jniLibs/Msc.jar')
+    compile files('src/main/jniLibs/libpingpp-2.1.4.jar')
     compile files('src/main/jniLibs/libammsdk.jar')
+    compile files('src/main/jniLibs/alipaySdk-20160223.jar')
     compile files('src/main/jniLibs/jpush-android-2.1.3.jar')
     compile files('src/main/jniLibs/nineoldandroids-2.4.0.jar')
     compile files('src/main/jniLibs/weizhang_sdk.jar')
     compile files('src/main/jniLibs/xUtils-2.6.14.jar')
-
     //自由裁剪
     compile 'com.edmodo:cropper:1.0.1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
-
     //Fragment监听返回键事件
     compile 'com.github.ikidou:FragmentBackHandler:2.1'
-
 }
